[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/source/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["source*"]
exclude = ["venv*", "tests*"]

[project]
name = "student-planner"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A Student Planner + GPA Tracker for tracking assignments and GPA."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["grade calculator", "grade tracker", "assignment notifier", "student"]
authors = [
  { name = "Teerathap Musikapan", email = "unstaplee@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Topic :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "pydantic>=2.0",
  "platformdirs>=3.0",
  "typing_extensions; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/unstaple/Student_Planner"

[project.scripts]
student-planner = "app:main"
